--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pratham Shrestha</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <meta name="description" content="Detailed Profile" />
+    <meta name="author" content="Pratham" />
 
     <meta property="og:title" content="Pratham Shrestha Portfolio" />
     <meta property="og:description" content="Detailed Profile" />
